# open-world

./: .gitignore  README.md  pyproject.toml
configs/evaluation/: example_eval_dppo.yaml  example_eval_openpi.yaml  template_pi0.yaml  template_pi05.yaml
configs/policies/: dp.yaml  openpi.yaml
configs/rewards/: dummy_reward.yaml  robometer.yaml  topreward.yaml
configs/rl/: example_rl.yaml  rl_finetune_pi0_droid.yaml
configs/training/: dppo_pretrain_example.yaml
configs/world_models/: dummy.yaml  vidwm.yaml
docs/: EVAL.md  INSTALL.md  TRAIN_POLICY.md
openworld/: __init__.py
openworld/configs/: schema.py
openworld/datasets/: __init__.py  initialization.py  initialization_dataset.py
openworld/envs/: __init__.py  action_chunk_scheduler.py  world_model_env.py
openworld/policies/: __init__.py  base_policy.py  dp_policy.py  dppo_loader.py  openpi_action_adapter.py  openpi_loader.py  openpi_policy.py  registry.py
openworld/rewards/: __init__.py  base_reward_model.py  dummy_reward_model.py  registry.py  robometer_reward_model.py  topreward_reward_model.py
openworld/runners/: __init__.py  evaluator.py  rl_finetune_runner.py
openworld/training/: openpi_trainable.py  ppo.py  reward_scorer.py  rollout_buffer.py
openworld/utils/: io.py  optional_dependencies.py  video.py
openworld/world_models/: __init__.py  base_world_model.py  dummy_world_model.py  registry.py  vidwm_loader.py  vidwm_world_model.py
scripts/: generate_videos.py  process_droid_for_dppo.py  run_evaluation.py  run_rl_finetune.py  score_videos_robometer.py  train_dppo.py
vidwm/action_encoders/: base_action_encoder.py  clip_aligned_action_encoder.py  unaligned_action_encoder.py
vidwm/video_models/: stable_video_diffusion.py  vidwm_diffusion.py
vidwm/video_models/utils/: svd_model_utils.py  svd_unet_utils.py
